--- a/Memes.html
+++ b/Memes.html
@@ -8,7 +8,7 @@
     <script src="memeDev.js"></script>
 </head>
 <body>
-<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2FstlCITYsc%2Fstatus%2F1526966824587362308&psig=AOvVaw1D9lDfCRlRSOmPN9LUQ4Tf&ust=1681497458591000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCLjZoqnAp_4CFQAAAAAdAAAAABAE">
+<img src="https://static-resources.zybooks.com/static/UofA_header.svg">
     <nav>
         <a href="Memes.html">Home</a>
         <a href="profile.html">Profile</a>
