--- a/Memes.html
+++ b/Memes.html
@@ -8,16 +8,18 @@
     <script src="memeDev.js"></script>
 </head>
 <body>
-<img src="https://static-resources.zybooks.com/static/UofA_header.svg">
     <nav>
         <a href="Memes.html">Home</a>
         <a href="profile.html">Profile</a>
     </nav>
+    <div class ="container">
+        <img src="https://gsrc.ucr.edu/sites/default/files/styles/form_preview/public/kronk.gif?itok=wQfBUXXg">
+        <div class = "topleft"></div>
 <div id="content"> 
     <div id="favorites">
         <h1>Favorites</h1>
-        <input type="text" id="item">
-        <input type="text" id="linkName">
+        <input type="text" placeholder="Insert Meme Link" id="item">
+        <input type="text" placeholder="Meme Name" id="linkName">
 
         <input type="button" id="addBtn" value="Add">
         <ol>
