--- a/Memes.html
+++ b/Memes.html
@@ -13,7 +13,7 @@
         <a href="profile.html">Profile</a>
     </nav>
     <div class ="container">
-        <img src="https://gsrc.ucr.edu/sites/default/files/styles/form_preview/public/kronk.gif?itok=wQfBUXXg">
+        <img id="viewport" src="https://gsrc.ucr.edu/sites/default/files/styles/form_preview/public/kronk.gif?itok=wQfBUXXg">
         <div class = "topleft"></div>
 <div id="content"> 
     <div id="favorites">
@@ -26,8 +26,10 @@
             <!-- <a href="HippityHoppityInfo.html">Hippity Hoppity</a> -->
         </ol>
         <input type="button" id="clearBtn" value="Clear Favorites">
-        <input type="button" id="save" value="Save">
-        <input type="button" id="load" value="Load">
+
+        <!-- Debug Tools -->
+        <!-- <input type="button" id="save" value="Save">
+        <input type="button" id="load" value="Load"> -->
     </div> 
 </div>
 </body>
