--- a/Memes.html
+++ b/Memes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <title>Best Meme Compendium</title>
     <link rel="stylesheet" href="Website_CSS.css">
-    <script src="memeScript.js"></script>
-<!--     <script src="memeDev.js"></script> -->
+    <!-- <script src="memeScript.js"></script> -->
+    <script src="memeDev.js"></script>
 </head>
 <body>
     <nav>
@@ -28,8 +28,8 @@
         <input type="button" id="clearBtn" value="Clear Favorites">
 
         <!-- Debug Tools -->
-        <!-- <input type="button" id="save" value="Save">
-        <input type="button" id="load" value="Load"> -->
+        <input type="button" id="save" value="Save">
+        <input type="button" id="load" value="Load">
     </div> 
 </div>
 </body>
