--- a/Memes.html
+++ b/Memes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Best Meme Compendium</title>
     <link rel="stylesheet" href="Website_CSS.css">
-    <!-- <script src="memeScript.js"></script> -->
+    <script src="memeScript.js"></script>
     <script src="memeDev.js"></script>
 </head>
 <body>
@@ -15,6 +15,7 @@
     <div class ="container">
         <img id="viewport" src="https://gsrc.ucr.edu/sites/default/files/styles/form_preview/public/kronk.gif?itok=wQfBUXXg">
         <div class = "topleft"></div>
+    </div>
 <div id="content"> 
     <div id="favorites">
         <h1>Favorites</h1>
