--- a/Memes.html
+++ b/Memes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Best Meme Compendium</title>
-    <link rel="stylesheet" href="Website_CSS.css">
+    <!-- <link rel="stylesheet" href="Website_CSS.css"> -->
     <script src="memeScript.js"></script>
     <script src="memeDev.js"></script>
 </head>
