--- a/memeLoginPageTest.html
+++ b/memeLoginPageTest.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>MyMemes Login</title>
+    <link rel="stylesheet" href="memes.css">
 </head>
 <body>
     <form method="post" action="/form_process">
