--- a/Memes.html
+++ b/Memes.html
@@ -8,7 +8,7 @@
     <!-- <script src="memeScript.js"></script>    -->
     <script src="memeDev.js"></script>
 </head>
-<body style="background-color: rgb(30 30 30); color: white;">
+<body>
     <div class ="container">
         <img id="viewport" style="float:right; width: 500px; border: 5px; border-color: blue; border-style: groove;" src="https://gsrc.ucr.edu/sites/default/files/styles/form_preview/public/kronk.gif?itok=wQfBUXXg">
         <div class = "topleft"></div>
@@ -17,25 +17,29 @@
         <img id="viewport2" style="float:left; width: 500px; border: 5px; border-color: blue; border-style: groove;" src="https://gsrc.ucr.edu/sites/default/files/styles/form_preview/public/kronk.gif?itok=wQfBUXXg">
         <div class = "topright"></div>
     </div>
-    
-    <div id="menu">        
-        <h1>MyMemes</h1>
+    <h1>Welcome to MyMemes!</h1>
+    <div id="menuBorder">
         <nav>
             <a href="Memes.html">Home</a>
             <a href="profile.html">Profile</a>
-        </nav>          
-        <input type="text" placeholder="Insert Meme Link" id="item">
-        <input type="text" placeholder="Meme Name" id="linkName">
-        <!-- <input type="text" placeholder="img height" id="height">
-        <input type="text" placeholder="img width" id="width"> -->
-        <input type="button" id="addBtn" value="Add">
-        <input type="button" id="clearInputs" value="Clear Fields">
-        <input type="button" id="clearBtn" value="Clear All Memes">
-        <input type="button" id="display" value="Display Local Storage">
-        <h2>Your Memes Here:</h2>
-    </div> 
+            <a href="http://localhost:3000/all">Users</a>
+            <a href="http://localhost:3000/memeLoginPage.html">Log Out</a>
+        </nav>     
+        <div id="menu">   
+            <input type="text" placeholder="Insert Meme Link" id="item">
+            <!-- <input type="text" placeholder="Meme Name" id="linkName"> -->
+            <!-- <input type="text" placeholder="img height" id="height">
+            <input type="text" placeholder="img width" id="width"> -->
+            <input type="button" id="addBtn" value="Add">
+            <input type="button" id="clearInputs" value="Clear Fields">
+            <input type="button" id="clearBtn" value="Clear All Memes">
+            <!-- <input type="button" id="display" value="Display Local Storage"> -->
+        </div> 
+    </div>  
+<!-- <div id="menu">               -->
+    <h2>Your Memes Here:</h2>
     <div id="memes" style="border: 5px; border-color: black;">
-    </div>
+    <!-- </div> -->
 </div>
 </div>
 </body>
