--- a/Memes.html
+++ b/Memes.html
@@ -3,44 +3,54 @@
 <head>
     <meta charset="UTF-8" />
     <title>Best Meme Compendium</title>
-    <!-- <link rel="stylesheet" href="Website_CSS.css"> -->
     <link rel="stylesheet" href="memes.css">
-    <!-- <script src="memeScript.js"></script>    -->
-    <script src="memeDev.js"></script>
+    <script src="memeDev.js" defer></script>
 </head>
 <body>
-    <div class ="container">
-        <img id="viewport" style="float:right; width: 500px; border: 5px; border-color: blue; border-style: groove;" src="https://gsrc.ucr.edu/sites/default/files/styles/form_preview/public/kronk.gif?itok=wQfBUXXg">
-        <div class = "topleft"></div>
+    <div id="cronk">
+        
     </div>
-    <div class ="container2">
-        <img id="viewport2" style="float:left; width: 500px; border: 5px; border-color: blue; border-style: groove;" src="https://gsrc.ucr.edu/sites/default/files/styles/form_preview/public/kronk.gif?itok=wQfBUXXg">
-        <div class = "topright"></div>
-    </div>
+    <h1 id="user" style="top: 10%; left: 40%; position: absolute; color: gold;"></h1>
     <h1>Welcome to MyMemes!</h1>
     <div id="menuBorder">
         <nav>
             <a href="Memes.html">Home</a>
             <a href="profile.html">Profile</a>
-            <a href="http://localhost:3000/all">Users</a>
-            <a href="http://localhost:3000/memeLoginPage.html">Log Out</a>
+            <a href="all">Users</a>
+            <a href="memeLoginPage.html" id="logout">Log Out</a>
         </nav>     
         <div id="menu">   
-            <input type="text" placeholder="Insert Meme Link" id="item">
-            <!-- <input type="text" placeholder="Meme Name" id="linkName"> -->
-            <!-- <input type="text" placeholder="img height" id="height">
-            <input type="text" placeholder="img width" id="width"> -->
+            <input type="text" placeholder="Paste Meme Image Link" id="item">
             <input type="button" id="addBtn" value="Add">
             <input type="button" id="clearInputs" value="Clear Fields">
             <input type="button" id="clearBtn" value="Clear All Memes">
-            <!-- <input type="button" id="display" value="Display Local Storage"> -->
         </div> 
     </div>  
-<!-- <div id="menu">               -->
-    <h2>Your Memes Here:</h2>
+    <h2 id ='memeHeader' class="">Your Memes Here</h2>
     <div id="memes" style="border: 5px; border-color: black;">
-    <!-- </div> -->
-</div>
-</div>
+    </div>  
+    <script>
+        let user;
+        async function getUser() {
+            let res = await fetch('http://localhost:3000/user')
+            res.text().then((data)=>{
+                document.querySelector('#user').textContent = 'Hello ' + data +'!';
+                user = data;
+                localStorage.setItem('username', user);
+            });
+        }
+
+        if(user == null){   
+            getUser();
+        } else {
+            document.querySelector('#user').textContent = 'Hello ' + user +'!';
+        }
+
+        function addCronk(){
+            let cronk = document.querySelector('#cronk');
+            // cronk.innerHTML += '<img id="viewport" src="https://gsrc.ucr.edu/sites/default/files/styles/form_preview/public/kronk.gif?itok=wQfBUXXg">';
+            cronk.innerHTML += '<img id="viewport2" src="https://gsrc.ucr.edu/sites/default/files/styles/form_preview/public/kronk.gif?itok=wQfBUXXg">';
+        } addCronk();
+    </script>
 </body>
 </html>
